# eye-tracking

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  scaler.pkl  y_scaler.pkl
data/: blank_output.json
experiments/: run_20251104_180122.json  run_20251104_200131.json  run_20251104_200410.json
notebooks/: data_exploration.ipynb  data_h5.ipynb
src/: data_loader.py  evaluate.py  model.py  train.py
src/models/: gaze_classifier.py  gaze_classifier_max.py  gaze_classifier_min.py  gaze_regressor.py  gaze_regressor_max.py  gaze_regressor_min.py  gaze_res_mlp.py  test_model.py  test_model_v2.py
src/utils/: augmentation.py  data_loader.py  h5_data_loader.py  landmark_normalization.py  merge.py
